Push article to blog

--- a/output/categories.html
+++ b/output/categories.html
@@ -8,26 +8,26 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
 	<!--[if lt IE 9]>
-		<script src="./theme/html5.js"></script>
+		<script src="http://brandonw.github.io/theme/html5.js"></script>
 		<![endif]-->
-	<link href="./theme/css/ipython.css" rel="stylesheet">
+	<link href="http://brandonw.github.io/theme/css/ipython.css" rel="stylesheet">
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/simplex/bootstrap.min.css" rel="stylesheet">
-	<link href="./theme/css/local.css" rel="stylesheet">
-	<link href="./theme/css/pygments.css" rel="stylesheet">
+	<link href="http://brandonw.github.io/theme/css/local.css" rel="stylesheet">
+	<link href="http://brandonw.github.io/theme/css/pygments.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
 	<div class="page-header">
-		<h1><a href=".">Brandon Waskiewicz</a>
+		<h1><a href="http://brandonw.github.io">Brandon Waskiewicz</a>
             <br><small>Blog</small></h1>
 	</div>
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 <h1>Categories</h1>
 <ul>
-	<li><a href="./category/windows.html">Windows</li>
+	<li><a href="http://brandonw.github.io/category/windows.html">Windows</li>
 </ul>
 		</div>
 	</div> 	<!-- <hr> -->
@@ -40,24 +40,24 @@
 					<div class="col-md-4">
 						<h4>Blog</h4>
 						<ul class="list-unstyled my-list-style">
-                            <li><a href="."><i class="fa fa-book"></i> Home</a></li>
-                            <li><a href="./tags.html"><i class="fa fa-tags"></i> Tags</a></li>
-                            <li><a href="./archives.html"><i class="fa fa-archive"></i> Archives</a></li>
-                            <li><a href="./None"><i class="fa fa-rss "></i> rss</a></li>
-                            <li><a href="./None"><i class="fa fa-rss"></i> atom</a></li>
+                            <li><a href="http://brandonw.github.io"><i class="fa fa-book"></i> Home</a></li>
+                            <li><a href="http://brandonw.github.io/tags.html"><i class="fa fa-tags"></i> Tags</a></li>
+                            <li><a href="http://brandonw.github.io/archives.html"><i class="fa fa-archive"></i> Archives</a></li>
+                            <li><a href="http://brandonw.github.io/feeds/rss.xml"><i class="fa fa-rss "></i> rss</a></li>
+                            <li><a href="http://brandonw.github.io/feeds/atom.xml"><i class="fa fa-rss"></i> atom</a></li>
 						</ul>
 					</div>
 					<div class="col-md-4">
 						<h4>Author</h4>
 						<ul class="list-unstyled my-list-style">
                             <li><a href="http://github.com/brandonw"><i class="fa fa-github"></i> Github</a></li>
-                            <li><a href="./pdfs/resume.pdf"><i class="fa fa-file-pdf-o"></i> Resum&#233;</a></li>
+                            <li><a href="http://brandonw.github.io/pdfs/resume.pdf"><i class="fa fa-file-pdf-o"></i> Resum&#233;</a></li>
 						</ul>
 					</div>
 					<div class="col-md-4">
 						<h4>Categories</h4>
 						<ul class="list-unstyled my-list-style">
-                            <li><a href="./category/windows.html">Windows (1)</a></li>
+                            <li><a href="http://brandonw.github.io/category/windows.html">Windows (1)</a></li>
 						</ul>
 					</div>
 				</div>
@@ -88,6 +88,16 @@ jQuery(document).ready(function($) {
 		});
 	});
 });
+</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56105941-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 </body>
 </html>
