--- a/output/aspnet-mvc-5-error-pages.html
+++ b/output/aspnet-mvc-5-error-pages.html
@@ -8,19 +8,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
 	<!--[if lt IE 9]>
-		<script src="./theme/html5.js"></script>
+		<script src="http://brandonw.github.io/theme/html5.js"></script>
 		<![endif]-->
-	<link href="./theme/css/ipython.css" rel="stylesheet">
+	<link href="http://brandonw.github.io/theme/css/ipython.css" rel="stylesheet">
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/simplex/bootstrap.min.css" rel="stylesheet">
-	<link href="./theme/css/local.css" rel="stylesheet">
-	<link href="./theme/css/pygments.css" rel="stylesheet">
+	<link href="http://brandonw.github.io/theme/css/local.css" rel="stylesheet">
+	<link href="http://brandonw.github.io/theme/css/pygments.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
 	<div class="page-header">
-		<h1><a href=".">Brandon Waskiewicz</a>
+		<h1><a href="http://brandonw.github.io">Brandon Waskiewicz</a>
             <br><small>Blog</small></h1>
 	</div>
 	<div class="row">
@@ -36,16 +36,16 @@
 	<div>
 		Category:
 		<span itemprop="articleSection">
-			<a href="./category/windows.html" rel="category">Windows</a>
+			<a href="http://brandonw.github.io/category/windows.html" rel="category">Windows</a>
 		</span>
 	</div>
 	<div>
 		Tags:
         <span itemprop="keywords">
-            <a href="./tag/aspnet-mvc.html" rel="tag">aspnet mvc</a>,
+            <a href="http://brandonw.github.io/tag/aspnet-mvc.html" rel="tag">aspnet mvc</a>,
         </span>
         <span itemprop="keywords">
-            <a href="./tag/errors.html" rel="tag">errors</a>
+            <a href="http://brandonw.github.io/tag/errors.html" rel="tag">errors</a>
         </span>
 	</div>
 	<div itemprop="articleBody" class="article-body"><h3>Introduction</h3>
@@ -298,6 +298,19 @@ errors down the road.</p></div>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 <br />
 <script type="text/javascript" src="//www.redditstatic.com/button/button1.js"></script><br />
+	<h2>Comments</h2>
+<div id="disqus_thread"></div>
+<script type="text/javascript">
+    var disqus_shortname = 'brandons-blog'; 
+    var disqus_title = 'ASP.NET MVC 5 Error Pages';
+
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 </div>
 		</div>
 	</div> 	<!-- <hr> -->
@@ -310,24 +323,24 @@ errors down the road.</p></div>
 					<div class="col-md-4">
 						<h4>Blog</h4>
 						<ul class="list-unstyled my-list-style">
-                            <li><a href="."><i class="fa fa-book"></i> Home</a></li>
-                            <li><a href="./tags.html"><i class="fa fa-tags"></i> Tags</a></li>
-                            <li><a href="./archives.html"><i class="fa fa-archive"></i> Archives</a></li>
-                            <li><a href="./None"><i class="fa fa-rss "></i> rss</a></li>
-                            <li><a href="./None"><i class="fa fa-rss"></i> atom</a></li>
+                            <li><a href="http://brandonw.github.io"><i class="fa fa-book"></i> Home</a></li>
+                            <li><a href="http://brandonw.github.io/tags.html"><i class="fa fa-tags"></i> Tags</a></li>
+                            <li><a href="http://brandonw.github.io/archives.html"><i class="fa fa-archive"></i> Archives</a></li>
+                            <li><a href="http://brandonw.github.io/feeds/rss.xml"><i class="fa fa-rss "></i> rss</a></li>
+                            <li><a href="http://brandonw.github.io/feeds/atom.xml"><i class="fa fa-rss"></i> atom</a></li>
 						</ul>
 					</div>
 					<div class="col-md-4">
 						<h4>Author</h4>
 						<ul class="list-unstyled my-list-style">
                             <li><a href="http://github.com/brandonw"><i class="fa fa-github"></i> Github</a></li>
-                            <li><a href="./pdfs/resume.pdf"><i class="fa fa-file-pdf-o"></i> Resum&#233;</a></li>
+                            <li><a href="http://brandonw.github.io/pdfs/resume.pdf"><i class="fa fa-file-pdf-o"></i> Resum&#233;</a></li>
 						</ul>
 					</div>
 					<div class="col-md-4">
 						<h4>Categories</h4>
 						<ul class="list-unstyled my-list-style">
-                            <li><a href="./category/windows.html">Windows (1)</a></li>
+                            <li><a href="http://brandonw.github.io/category/windows.html">Windows (1)</a></li>
 						</ul>
 					</div>
 				</div>
@@ -358,6 +371,16 @@ jQuery(document).ready(function($) {
 		});
 	});
 });
+</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-56105941-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 </body>
 </html>
